force-app/main/default/objects/Product2/fields/Coste__c.field-meta.xml
<CustomField>
    <fullName>Coste__c</fullName>
    <label>Coste Guipuzcoa</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>