force-app/main/default/objects/Product2/fields/Coste_actual_gas__c.field-meta.xml
<CustomField>
    <fullName>Coste_actual_gas__c</fullName>
    <label>Coste actual gas</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>