force-app/main/default/objects/Product2/fields/Coste_asturias__c.field-meta.xml
<CustomField>
    <fullName>Coste_asturias__c</fullName>
    <label>Coste asturias</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>