force-app/main/default/objects/Product2/fields/ExternalIdCustom__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdCustom__c</fullName>
    <description>Campo creado para facilitar la carga de maestros. Contiene el código del producto</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>