force-app/main/default/objects/Product2/fields/Primaservicio__c.field-meta.xml
<CustomField>
    <fullName>Primaservicio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primaservicio</label>
    <type>Checkbox</type>
</CustomField>