force-app/main/default/objects/Product2/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servicio</label>
    <type>Checkbox</type>
</CustomField>