force-app/main/default/objects/Product2/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <label>Unidad medida base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>Toneladas</fullName>
            </value>
            <value>
                <fullName>Ud/Año</fullName>
            </value>
            <value>
                <fullName>Kw/h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>