force-app/main/default/objects/Product2/fields/Visible_en_contrato__c.field-meta.xml
<CustomField>
    <fullName>Visible_en_contrato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible en contrato</label>
    <type>Checkbox</type>
</CustomField>