force-app/main/default/objects/Product2/recordTypes/Colaborador.recordType-meta.xml
<RecordType>
    <fullName>Colaborador</fullName>
    <active>true</active>
    <description>Producto de colaborador</description>
    <label>Colaborador</label>
</RecordType>