force-app/main/default/objects/Product2/recordTypes/Primagas.recordType-meta.xml
<RecordType>
    <fullName>Primagas</fullName>
    <active>true</active>
    <description>Producto del catálogo de Primagas</description>
    <label>Primagas</label>
</RecordType>